--- a/index.html
+++ b/index.html
@@ -1,1 +1,14 @@
-<h1>KodNext</h1>
+<h1><em>Kodable</em> by Kodnext</h1>
+<h2>What is Kodable?</h2>
+<p>The name Kodable is derived from two words "code" and "editable".</p>
+<p>Kodable is a High level transpiler which can give you an ability to write custom syntexes in any higher level language.</p>
+<h2>Why we need Kodable?</h2>
+<ul>
+<li>Kodable can ease the life of a programmer. If programmers get choice of writing their own syntexes.</li>
+<li>Kodable can provide same syntex for various programming languages.</li>
+</ul>
+<h2>Kodable Transpiler Research Notes</h2>
+<ul>
+<li>Regular expressions won't work, Need to implement Parser.</li>
+<li>Babel uses Abstract syntex trees.</li>
+</ul>
