--- a/index.html
+++ b/index.html
@@ -12,3 +12,7 @@
 <li>Regular expressions won't work, Need to implement Parser.</li>
 <li>Babel uses Abstract syntex trees.</li>
 </ul>
+<h2>Reading material</h2>
+<ul>
+<li><a href"https://www.cs.bham.ac.uk/~hxt/2013/c-programming-language/trees-in-cplusplus.pdf">Parse Trees in C/C++</a></li>
+</ul>
