--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
 <li>First phase of compiler construction in lexical analyzer.&nbsp;</li>
 <li><strong>FLEX (fast lexical analyzer generator)</strong>&nbsp;is a tool/computer program for generating lexical analyzers (scanners or lexers) written by Vern Paxson in C around 1987.&nbsp;<a href="https://www.geeksforgeeks.org/flex-fast-lexical-analyzer-generator/">flex article jeeks for jeeks</a>.</li>
 <li>PLY is yet another implementation of lex and yacc for Python. Some notable features include the fact that its implemented entirely in Python and it uses LALR(1) parsing which is efficient and well suited for larger grammars.&nbsp;<a href="https://pypi.org/project/ply/">link to pip package</a>.</li>
+<li><strong>ANTLR</strong>&nbsp;(ANother Tool for Language Recognition) is a powerful parser generator for reading, processing, executing, or translating structured text or binary files. It's widely used to build languages, tools, and frameworks. From a grammar, ANTLR generates a parser that can build and walk parse trees.&nbsp;<a href="https://www.antlr.org/">antlr website.</a></li>
 </ul>
 <h2>Steps for implementation.</h2>
 <ul>
